[package]
name = "blog-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono"] }
tower-http = { version = "0.6.8", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
config = "0.15.19"
