[package]
name = "blog-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tower-layer = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono" ] }
config = "0.15.19"
uuid = { version = "1.19.0", features = [ "v4" ] }
validator = { version = "0.20.0", features = ["derive"] }
tower = "0.5"
async-trait = "0.1"
argon2 = { version = "0.5", features = ["std", "password-hash"] }
password-hash = { version = "0.5", features = ["std"] }
rand = { version = "0.9.2", features = ["std"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
